use Gradle to build CLI and Language Server
Gradle build is very fast and it provides very small fat jar.

fix code to be java 11 compliant