@@ -173,11 +173,22 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
   boolean startWithVowel(String word)
   {
 
-    return switch (word.charAt(0))
+    switch (word.charAt(0))
     {
-      case 'a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U' -> true;
-      default -> false;
-    };
+      case 'a':
+      case 'e':
+      case 'i':
+      case 'o':
+      case 'u':
+      case 'A':
+      case 'E':
+      case 'I':
+      case 'O':
+      case 'U':
+        return true;
+      default:
+        return false;
+    }
   }
 
   protected boolean checkTypeReference(Type type, EObject source, EReference feature)
@@ -302,9 +313,8 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
     }
   }
 
-  private static Set<String> validUsages = XsmpPackage.eINSTANCE.getEClassifiers().stream()
-          .filter(c -> c instanceof final EClass cls
-                  && XsmpPackage.Literals.NAMED_ELEMENT.isSuperTypeOf(cls))
+  private static Set<String> validUsages = XsmpPackage.eINSTANCE.getEClassifiers().stream().filter(
+          c -> c instanceof EClass && XsmpPackage.Literals.NAMED_ELEMENT.isSuperTypeOf((EClass) c))
           .map(ENamedElement::getName).collect(Collectors.toSet());
 
   @Check
@@ -412,7 +422,7 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
     }
 
     if (!elem.isAbstract() && elem.getMember().stream()
-            .anyMatch(m -> m instanceof final NamedElement e && xsmpUtil.isAbstract(e)))
+            .anyMatch(m -> m instanceof NamedElement && xsmpUtil.isAbstract((NamedElement) m)))
     {
       warning("The " + elem.eClass().getName() + " shall be abstract.",
               XsmpPackage.Literals.NAMED_ELEMENT__NAME);
@@ -450,7 +460,11 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
         case XsmpPackage.FIELD:
           fieldElementModifierValidator.checkModifiers((VisibilityElement) member, this);
           break;
-        case XsmpPackage.ENTRY_POINT, XsmpPackage.EVENT_SINK, XsmpPackage.EVENT_SOURCE, XsmpPackage.CONTAINER, XsmpPackage.REFERENCE:
+        case XsmpPackage.ENTRY_POINT:
+        case XsmpPackage.EVENT_SINK:
+        case XsmpPackage.EVENT_SOURCE:
+        case XsmpPackage.CONTAINER:
+        case XsmpPackage.REFERENCE:
           break;
         case XsmpPackage.OPERATION:
           operationElementModifierValidator.checkModifiers((VisibilityElement) member, this);
@@ -472,7 +486,7 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
 
     }
     if (!elem.isAbstract() && elem.getMember().stream()
-            .anyMatch(m -> m instanceof final NamedElement e && xsmpUtil.isAbstract(e)))
+            .anyMatch(m -> m instanceof NamedElement && xsmpUtil.isAbstract((NamedElement) m)))
     {
       error("The " + elem.eClass().getName() + " shall be abstract.",
               XsmpPackage.Literals.NAMED_ELEMENT__NAME);
@@ -533,10 +547,8 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
     final var upper = element.getUpper();
     if (upper != -1 && upper < lower)
     {
-      error("""
-              Lower bound shall be less or equal to the upper bound, if present.
-              Upper bound shall be -1 or larger or equal to the lower bound.
-              """, element.getMultiplicity(), XsmpPackage.Literals.MULTIPLICITY__LOWER);
+      error("Lower bound shall be less or equal to the upper bound, if present.\nUpper bound shall be -1 or larger or equal to the lower bound.",
+              element.getMultiplicity(), XsmpPackage.Literals.MULTIPLICITY__LOWER);
     }
 
   }
@@ -638,7 +650,8 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
 
       switch (kind)
       {
-        case FLOAT64, FLOAT32:
+        case FLOAT64:
+        case FLOAT32:
           final var min = safeExpression(elem.getMinimum(), elem);
           final var max = safeExpression(elem.getMaximum(), elem);
           if (min != null && max != null)
@@ -672,7 +685,14 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
 
       switch (kind)
       {
-        case INT16, INT32, INT64, INT8, UINT16, UINT32, UINT64, UINT8:
+        case INT16:
+        case INT32:
+        case INT64:
+        case INT8:
+        case UINT16:
+        case UINT32:
+        case UINT64:
+        case UINT8:
           final var min = safeExpression(elem.getMinimum(), elem);
           final var max = safeExpression(elem.getMaximum(), elem);
           if (min != null && max != null && min.compareTo(max) > 0)
@@ -764,12 +784,11 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
     final var members = elem.getMetadatum().getMetadata();
     final var nbMembers = members.size();
     final var eClass = elem.eClass();
-    final List<String> elemUsages = cache
-            .get(eClass, eClass.eResource(),
-                    () -> Stream
-                            .concat(Stream.of(eClass.getName()),
-                                    eClass.getEAllSuperTypes().stream().map(EClass::getName))
-                            .toList());
+    final List<String> elemUsages = cache.get(eClass, eClass.eResource(),
+            () -> Stream
+                    .concat(Stream.of(eClass.getName()),
+                            eClass.getEAllSuperTypes().stream().map(EClass::getName))
+                    .collect(Collectors.toList()));
 
     final Set<AttributeType> visitedTypes = new HashSet<>();
     for (var i = 0; i < nbMembers; ++i)
@@ -1093,7 +1112,10 @@ public class XsmpcatValidator extends AbstractXsmpcatValidator
     // check type modifiers
     switch (p.eClass().getClassifierID())
     {
-      case XsmpPackage.CLASS, XsmpPackage.EXCEPTION, XsmpPackage.MODEL, XsmpPackage.SERVICE:
+      case XsmpPackage.CLASS:
+      case XsmpPackage.EXCEPTION:
+      case XsmpPackage.MODEL:
+      case XsmpPackage.SERVICE:
         classModifierValidator.checkModifiers(p, this);
         break;
       default:
